<resources>
    <string name="app_name">CRM</string>
    <string name="addcustomer">AddCustomer</string>
    <string name="customer_name">customer name</string>
    <string name="call">Call</string>
    <string name="visit">Visit</string>
    <string name="follow_up">Follow up</string>
    <string name="save">Save</string>
    <string name="no_data_hint">There is no customer, click the add button below and add new customer</string>
</resources>